# fastapi-examples

./: LICENSE  pyproject.toml
fastapi_examples/: main.py
